--- a/index.html
+++ b/index.html
@@ -3,32 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+
+    <!-- Fonte: -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
+
     <title>Cursos para curseiros</title>
+
 </head>
 <body>
 
     <header>
 
-        <h1>Cursos para curseiros</h1>
+        <div>
+            <h1 class="center" >Cursos para curseiros</h1>
+        </div>
 
     </header>
 
-    <section>
+    <section class="container">
 
-        <div>
+        <div class="block center">
 
-            <div>
-                <a href="usuario/loginUsuario.php">Acessar cursos</a>
+            <div class="inlineBlock mb5">
+                <a class="linkRoxo " href="usuario/loginUsuario.php">Acessar cursos</a>
             </div>
             
-            <div>
-                <a href="curso/loginAdm.php">Área para administradores</a>
+            <div class="inlineBlock">
+                <a class="linkRoxo" href="curso/loginAdm.php">Área para administradores</a>
             </div>
             
         </div>
 
         <div>
-            <p>Você é novo por aqui? <a href="usuario/novoUsuario.php">Faça um novo cadastro </a></p>
+            <p class="center">Você é novo por aqui? <a href="usuario/novoUsuario.php">Faça um novo cadastro </a></p>
         </div>
 
     </section>
